# py-state-machine

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_state_machine/: __init__.py
tests/: test_state_machine.py
